added some lines to demo text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div><p>Hi! My name is Ziyaddin!</p></div>
 			<div><p>And this is my avatar!</p><p><img src="images/baboon.png"></p></div>
 			<div><p>...No, its just a joke! :) ...</div>
-			<div><p>This is my premium Javascript plugin - Glitter.js</p></div>
+			<div><p>This is my awesome Javascript plugin - Glitter.js</p></div>
 			<div><p>You can make different projects on it</p></div>
 			<div><p>with its sexy slider...</p></div>
 			<div><p>You can also add own style to your HTML elements.</p></div>
@@ -24,7 +24,7 @@
 			<div><p><h4>...And H4...</h4></p></div>
 			<div><p><h5>...H5...</h5></p></div>
 			<div><p>...Bla Bla Bla...</p></div>
-			<div><p>The End! If you loved, you can <a href="http://codecanyon.net/user/ziyaddin">buy it</a> and begin to use now! You want to return back? No problem! Just press to the [<= Left Arrow] key.</p></div>
+			<div><p>The End! If you loved, you can <a href="http://github.com/ziyaddin/glitter.js">see it</a> and begin to use now! You want to return back? No problem! Just press to the [<= Left Arrow] key.</p></div>
 		</div>
 
 		<div id="panel">
