--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Glitter</title>
+	<title>Glitter.js</title>
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/glitter.css" />
 	<script type="text/javascript" src="js/glitter.js"></script>
